--- a/scss/teava.scss
+++ b/scss/teava.scss
@@ -2,7 +2,7 @@
 @import "../css/default/fonts";
 @import "../css/icons/font";
 @import "../css/default/colors";
-@import "../css/default/animation";
+@import "../css/default/animate";
 
 @import "../css/components/header-menu";
 @import "../css/components/menu";
