https try fix and counter

--- a/css/components/main.scss
+++ b/css/components/main.scss
@@ -1,7 +1,7 @@
 // MAIN BACKGROUND
 .main {
   width: 100%;
-  background: radial-gradient(rgba($dark_gold, 0.1), rgba(#262626, 1)), url("http://www.gainesvilleconnect.com/images/header-patterns/header-pattern-03.png"), url(../assets/img/gallery/img16.jpg);
+  background: radial-gradient(rgba($dark_gold, 0.1), rgba(#262626, 1)), url(../assets/img/mainoverlay.png), url(../assets/img/gallery/img16.jpg);
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
