--- a/scss/about.scss
+++ b/scss/about.scss
@@ -82,6 +82,7 @@
 }
 .testimonials-list {
   position: relative;
+  padding: 10px;
   max-height: 700px;
   overflow-y: scroll;
   &::-webkit-scrollbar{
