--- a/css/default/common-media.scss
+++ b/css/default/common-media.scss
@@ -1,3 +1,8 @@
+::selection {
+  background: $dark_grey;
+  color: $white;
+}
+
 @media screen and (min-width: 1024px) {
   .navbar-links {
     display: block;
