--- a/css/components/about.scss
+++ b/css/components/about.scss
@@ -1,39 +1,29 @@
 .about {
-  padding: 100px 30px;
+  padding: 60px 30px;
+}
+.about__text {
+  margin-top: 25px;
+  padding-left: 15px;
 }
 .about__figure {
   position: relative;
 }
 .about__image {
   width: 100%;
+  max-width: 600px;
 }
 .about__image-pattern {
-  width: 60%;
+  width: 50%;
   opacity: 0.9;
   position: absolute;
   top: -12px;
   left: -12px;
   z-index: -1;
-  // margin-top: -10px;
-}
-.about__text {
-  margin-top: 20px;
-}
-.about__date {
-  display: block;
-  width: 100%;
-  font-family: Lato, sans-serif;
-  font-size: 16px;
-  text-transform: uppercase;
-  opacity: 0.8;
-  font-weight: 300;
-  letter-spacing: 1.5px;
-  padding: 10px 0px;
 }
 .about__title {
   font-family: Poppins, sans-serif;
   font-size: 32px;
-  line-height: 30px;
+  line-height: 38px;
   font-weight: 600;
 }
 .about__description {
