--- a/css/components/more-about.scss
+++ b/css/components/more-about.scss
@@ -1,14 +1,22 @@
 .more-about {
   background:$gold;
-  color: $dark_grey;
+  color: $white;
   padding: 70px 30px;
+}
+.more-about__description-wrapper {
+  border-left: 4px solid $white;
+  border-radius: 5px;
+  padding: 15px;
+  background: rgba($dark_grey, 0.05);
 }
 .more-about__title {
   font-family: Poppins, sans-serif;
   font-weight: 600;
   font-size: 24px;
+  margin-bottom: 15px;
 }
 .more-about__description {
+  text-indent: 15px;
   font-family: Lato, sans-serif;
   font-size: 20px;
   line-height: 25px;
