--- a/css/default/common-media.scss
+++ b/css/default/common-media.scss
@@ -75,3 +75,10 @@ body {
   display: block;
   background: white;
 }
+.credit {
+  margin-top: 10px;
+  font-size: 12px;
+  a {
+    color: white;
+  }
+}
