--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -139,6 +139,7 @@
   display: block;
 }
 .interactivity-section-wrapper2 {
+  max-width: 650px;
   display: flex;
   justify-content: space-around;
 }
@@ -170,6 +171,7 @@
   }
 }
 .interactivity-label-radio {
+  max-width: 650px;
   font-family: Lato, sans-serif;
   display: flex;
   justify-content: space-between;
@@ -184,7 +186,7 @@
   border-radius: 50%;
   width: 23px;
   height: 22px;
-  background: url(https://image.ibb.co/hvV2fT/finalchecked.png);
+  background: url(../assets/img/labelcheck.png);
   margin-right: 15px;
   opacity: 0.6;
 }
@@ -221,11 +223,16 @@
 	left: 5px;
 	top: 50%;
 }
+.interactivity-image span {
+  background: $gold;
+  color: white;
+  padding: 2px;
+}
 #width {
 	display: inline-block;
 	position: absolute;
-	right: 14%;
-	top: 75%;
+  right: 14%;
+  top: 78%;
 	transform: rotate(-38deg);
 }
 .opening {
@@ -237,9 +244,18 @@
 	left: 50%;
 }
 .opening-second {
-	left: 12%;
-	top: 90%;
-	transform: rotate(20deg);
+  left: 5%;
+  top: 89%;
+  transform: rotate(26deg);
+}
+.flexHere {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 800px) {
+  .flexHere .right {
+    flex-direction: column;
+  }
 }
 @media screen and (max-width: 1200px) {
   .interactivity,
