--- a/scss/index.scss
+++ b/scss/index.scss
@@ -49,26 +49,13 @@
       margin: 0 15px;
     }
   }
-  .about {
-    display: flex;
-    align-items: center;
-  }
-  .about__image {
-    width: 80%;
-  }
-  .about__text {
-    padding: 0 10px 0 10px;
-  }
   .gallery__images {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
     img {
       max-width: 100%;
     }
     figure {
       display: inline-block;
-      width: 50%;
+      width: 75%;
     }
   }
   .footer-text{
@@ -91,10 +78,10 @@
     line-height: 50px;
   }
   .gallery__images {
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     figure {
-      width: 28%;
+      width: 30%;
     }
   }
   .about,
@@ -108,5 +95,47 @@
 @media screen and (max-width: 1024px) {
   .more-about__description {
     font-size: 16px;
+  }
+}
+.info {
+  width: 100%;
+  padding: 35px 25px;
+  background: $gold;
+}
+.info-wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  color: $white;
+  text-align: center;
+}
+.info-title {
+  font-family: Poppins, sans-serif;
+  font-size: 42px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1024px) {
+  .info {
+    padding: 50px;
+  }
+  .info-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .info-title {
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .about {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    * {
+      flex-grow: 1;
+      flex-basis: 0;
+    }
   }
 }
