phone numbers and google analytics

--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -1,4 +1,5 @@
 .main__footer {
+  font-family: Poppins, sans-serif;
   color: $white;
   background: $dark_grey;
   padding: 70px 15px 40px 15px;
@@ -8,7 +9,7 @@
   align-items: center;
 }
 .footer__info {
-  font-family: Poppins, sans-serif;
+  padding-top: 10px;
   text-align: left;
   font-weight: 400;
   font-size: 20px;
@@ -26,6 +27,14 @@
 }
 .footer-text {
   padding: 10px 0;
+}
+.footer-numbers {
+  font-weight: bold;
+  display: flex;
+  justify-content: space-around;
+}
+.phone-number {
+  font-size: 15px !important;
 }
 .main__footer {
   .left,
