--- a/scss/teava.scss
+++ b/scss/teava.scss
@@ -126,11 +126,11 @@ strong {
   .main-wrapper {
     display: flex;
   }
-  .left,
-  .right {
-    flex-grow: 1;
-    flex-basis: 0;
-  }
+  // .left,
+  // .right {
+  //   flex-grow: 1;
+  //   flex-basis: 0;
+  // }
   .info {
     padding: 50px;
   }
